--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.5.0",
     "@studio-freight/lenis": "^1.0.42",
+    "convex": "^1.26.1",
     "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
