--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.4",
     "@mdx-js/loader": "^3.1.0",
     "@next/mdx": "^15.5.0",
     "@studio-freight/lenis": "^1.0.42",
@@ -16,6 +17,7 @@
     "framer-motion": "^12.23.12",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
+    "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
