--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,16 @@
 {
-  "builds": [
-    {
-      "src": "backend/app.py",
-      "use": "@vercel/python"
+  "version": 2,
+  "functions": {
+    "backend/app.py": {
+      "runtime": "@vercel/python@0.5.0"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "backend/app.py"
     }
   ],
-  "functions": {
-    "backend/app.py": {
-      "runtime": "python3.9"
-    }
-  },
   "env": {
     "PYTHONPATH": "./backend"
   }
