--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,18 @@
 {
   "version": 2,
   "functions": {
-    "backend/app.py": {
+    "api/index.py": {
       "runtime": "@vercel/python@0.5.0"
     }
   },
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "backend/app.py"
+      "src": "/api/(.*)",
+      "dest": "/api/index.py"
+    },
+    {
+      "src": "/(query|simple-query|health)",
+      "dest": "/api/index.py"
     }
-  ],
-  "env": {
-    "PYTHONPATH": "./backend"
-  }
+  ]
 }
