--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,17 +1,17 @@
 # Core API framework
-fastapi==0.116.1
-uvicorn[standard]==0.35.0
-python-multipart==0.0.20
+fastapi==0.104.1
+uvicorn==0.24.0
+python-multipart==0.0.6
 
 # Google Gemini AI for text-to-SQL
-google-generativeai==0.8.3
+google-generativeai==0.3.2
 
 # Supabase Python client
-supabase==2.10.0
+supabase==1.2.0
 
 # Environment and configuration
-python-dotenv==1.0.1
-pydantic==2.11.7
+python-dotenv==1.0.0
+pydantic==2.4.2
 
 # HTTP requests (for testing)
-requests==2.32.3
+requests==2.31.0
